# mcp-use

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  setup.py  test.py
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: changelog.yml  lint.yml  publish.yml  release-drafter.yml  stale.yml  testprimitives.yml  tests.yml  transportstests.yml  unittests.yml  update-readme.yml
docs/: building-custom-agents.mdx  changelog.mdx  development.mdx  docs.json  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
docs/advanced/: building-custom-agents.mdx  logging.mdx  multi-server-setup.mdx  security.mdx
docs/agent/: agent-configuration.mdx  interactive-chat-patterns.mdx  llm-integration.mdx  server-manager.mdx  streaming.mdx  structured-output.mdx
docs/api-reference/: adapters.mdx  introduction.mdx  mcpagent.mdx  mcpclient.mdx
docs/blog/: middleware.mdx
docs/changelog/: 1_3_11.mdx  changelog.mdx
docs/client/: authentication.mdx  client-configuration.mdx  connection-types.mdx  direct-tool-calls.mdx  elicitation.mdx  logging.mdx  middleware.mdx  notifications.mdx  prompts.mdx  resources.mdx  sampling.mdx  sandbox.mdx  tools.mdx
docs/community/: showcase.mdx
docs/development/: observability.mdx  telemetry.mdx
docs/essentials/: agent-configuration.mdx  client-configuration.mdx  configuration.mdx  connection-types.mdx  debugging.mdx  llm-integration.mdx  sampling.mdx  server-manager.mdx
docs/getting-started/: configuration.mdx  index.mdx  installation.mdx  quickstart.mdx
docs/guides/: building-custom-agents.mdx  debugging.mdx  logging.mdx  multi-server-setup.mdx  security.mdx  streaming.mdx
docs/snippets/: snippet-intro.mdx  youtube-embed.mdx
docs/troubleshooting/: common-issues.mdx  connection-errors.mdx  performance.mdx
examples/: airbnb_mcp.json  airbnb_use.py  blender_use.py  browser_mcp.json  browser_use.py  chat_examle.py  chat_example.py  direct_tool_call.py  example_middleware.py  filesystem_use.py  http_example.py  mcp_everything.py  multi_server_example.py  sandbox_everything.py  simple_oauth_example.py  simple_server_manager_use.py  stream_example.py  structured_output.py
mcp_use/: __init__.py  cli.py  client.py  config.py  exceptions.py  logging.py  session.py  types.py  utils.py
mcp_use/adapters/: __init__.py  base.py  langchain_adapter.py
mcp_use/agents/: __init__.py  base.py  langchain_agent.py  mcpagent.py  remote.py  server_manager.py
mcp_use/agents/prompts/: default.py  system_prompt_builder.py  templates.py
mcp_use/auth/: __init__.py  bearer.py  oauth.py  oauth_callback.py
mcp_use/connectors/: __init__.py  base.py  http.py  sandbox.py  stdio.py  utils.py  websocket.py
mcp_use/errors/: error_formatting.py
mcp_use/managers/: __init__.py  base.py  server_manager.py
mcp_use/managers/tools/: __init__.py  base_tool.py  connect_server.py  disconnect_server.py  get_active_server.py  list_servers_tool.py  search_tools.py  use_tool.py
mcp_use/middleware/: __init__.py  logging.py  metrics.py  middleware.py
mcp_use/observability/: __init__.py  callbacks_manager.py  laminar.py  langfuse.py
mcp_use/task_managers/: __init__.py  base.py  http.py  sse.py  stdio.py  streamable_http.py  websocket.py
mcp_use/telemetry/: events.py  posthog.py  telemetry.py  utils.py
mcp_use/tools/: __init__.py
mcp_use/types/: clientoptions.py  sandbox.py
mcpeer/: __init__.py  client.py  logging.py  session.py  types.py
mcpeer/agents/: langchain_agent.py  mcpagent.py
mcpeer/connectors/: base.py  stdio.py  websocket.py
mcpeer/tools/: converter.py
pymcp/: __init__.py  types.py
pymcp/agents/: __init__.py  base.py  langchain_agent.py  mcpagent.py
pymcp/connectors/: base.py
pymcp/tools/: formats.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py
tests/integration/others/: test_custom_streaming_integration.py
tests/integration/primitives/: test_auth.py  test_discovery.py  test_elicitation.py  test_logging.py  test_notifications.py  test_prompts.py  test_resources.py  test_sampling.py  test_tools.py
tests/integration/servers_for_testing/: __init__.py  auth_server.py  custom_streaming_server.py  (+4 more)
tests/unit/: test_agent.py  test_client.py  test_config.py  test_enum_handling.py  test_http_connector.py  test_logging.py  test_placeholder.py  test_sandbox_connector.py  test_search_tools_issue_138.py  test_session.py  test_stdio_connector.py  test_websocket_connection_manager.py
(+9 files in other folders)
